# qemu

./: .gitignore  README.md  configure  hmp-commands.hx  meson.build  qemu-options.hx
accel/tcg/: cpu-exec.c  tcg-accel-ops-rr.c
include/exec/: cpu-all.h
include/monitor/: hmp.h
include/qemu/: log.h
include/qflex/: qflex-arch.h  qflex-config.h  qflex-helper-a64.h  qflex-hmp.h  qflex-log.h  qflex-qemu-calls.h  qflex-traces.h  qflex.h
include/qflex/devteroflex/: custom-instrumentation.h  devteroflex.h  devteroflex.pb-c.h  file-ops.h  page-demander.h  tracing.h  verification.h
include/qflex/devteroflex/aws/: fpga.h  fpga_interface.h
include/qflex/devteroflex/simulation/: fpga_interface.h
softmmu/: vl.c
tests/devteroflex/: daxpy.c  fibonacci_by_fast_matrix_exponentiation.c  matrix_multiply.c  pthreads_reaidng_and_incrementing_a_counter.c  read_a_sentence_and_print_it_back.cpp  sleep_on_alarm_until_full_2_seconds.c  spin_until_full_2_seconds.c  time_testbench.py
util/: circular-buffer.c  circular-buffer.h  meson.build
util/qflex/: meson.build  qflex-config.c  qflex-hmp.c  qflex-log.c  qflex-traces.c  qflex.c
util/qflex/devteroflex/: custom-instrumentation.c  devteroflex.c  devteroflex.pb-c.c  devteroflex.proto  file-ops.c  meson.build  page-demander.c  tracing.c  verification.c
util/qflex/devteroflex/aws/: Makefile  compile_flags.txt  fpga_aws.c  fpga_interface.c  meson.build
util/qflex/devteroflex/simulation/: fpga_interface.c  fpga_rtl.c  ipc.c  meson.build
